Clean bettime with many style errors2

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -2197,7 +2197,7 @@ header nav {
 }
 
 .time {
-    font-family: 'Facebook Letter Faces', Calibri;
+    font-family: Calibri;
     color: white;
     font-weight: bold;
 
@@ -2205,6 +2205,7 @@ header nav {
 
 .framemiddle {
     background-position: -2px;
+    height: 343px;
 
 }
 
@@ -2259,6 +2260,25 @@ table.medium thead td {
 
 #footer {
     background: none repeat scroll 0 0;
+
+}
+
+.time2 {
+    font-family: Calibri;
+
+}
+
+.summary {
+    float: left;
+    height: 17px;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 3px;
+
+}
+
+#summary {
+    padding-top: 14px;
 
 }
 
