--- a/protected/modules/yupe/widgets/EMarkItUp/assets/sets/markdown/style.css
+++ b/protected/modules/yupe/widgets/EMarkItUp/assets/sets/markdown/style.css
@@ -128,6 +128,7 @@ header {
 .time {
     color: white;
     font-weight: bold;
+    font-family: Calibri;
 
 }
 
@@ -143,5 +144,29 @@ table.medium thead td {
 
 #footer {
     background: none repeat scroll 0 0;
+
+}
+
+.time2 {
+    font-family: Calibri;
+
+}
+
+.summary {
+    float: left;
+    height: 17px;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 3px;
+
+}
+
+#summary {
+    padding-top: 14px;
+
+}
+
+.framemiddle {
+    height: 343px;
 
 }
