--- a/web/js/latest/images/style.css
+++ b/web/js/latest/images/style.css
@@ -97,7 +97,7 @@ header {
 }
 
 .time {
-    font-family: 'Facebook Letter Font', Calibri;
+    font-family: Calibri;
     color: white;
     font-weight: bold;
 
@@ -105,6 +105,7 @@ header {
 
 .framemiddle {
     background-position: -2px;
+    height: 343px;
 
 }
 
@@ -159,5 +160,24 @@ table.medium thead td {
 
 #footer {
     background: none repeat scroll 0 0;
+
+}
+
+.time2 {
+    font-family: Calibri;
+
+}
+
+.summary {
+    float: left;
+    height: 17px;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 3px;
+
+}
+
+#summary {
+    padding-top: 14px;
 
 }
